--- a/assets/styl/plugin.styl
+++ b/assets/styl/plugin.styl
@@ -1,2 +1,106 @@
 @import 'settings'
 @import 'nib'
+
+#plugin-core-server
+	p
+		margin: 0
+
+	fieldset
+		border: 1px solid $color-theme-5
+		border-radius: $border-radius
+		padding: $half-gutter
+		margin: $quarter-gutter 0
+		legend
+			padding: 0 $quarter-gutter
+			margin-left: -($quarter-gutter)
+			font-weight: 400
+			& + *
+				margin-top: 0 !important
+		.input-text
+			display: flex
+			align-items: center
+			label
+				white-space: nowrap
+
+	.group
+		display: flex
+		fieldset
+			flex: 1 0 auto
+			width: 0
+			margin: $quarter-gutter
+			&:first-child
+				margin-left: 0
+			&:last-child
+				margin-right: 0
+
+	.input-text
+		margin: $quarter-gutter 0
+		label
+			margin: 0 $quarter-gutter 0 0
+		input + *
+				margin: 0 0 0 $quarter-gutter
+
+	.serverinfo
+		.input-text
+			display: flex
+			label
+				flex: 1 0 auto
+			input
+				width: 80%
+			textarea
+				width: 80%
+				height: 4.2em
+
+	.servertype
+		display: flex
+		.static
+			flex: 1 0 auto
+			width: 0
+			display: flex
+			padding: $quarter-gutter
+			margin: $quarter-gutter
+			background: $color-theme-6
+			border-radius: $border-radius
+			label
+				flex: 1 0 auto
+			div
+				font-weight: 400
+			&:first-child
+				margin-left: 0
+			&:last-child
+				margin-right: 0
+
+	.cheat-protection
+		display: flex
+		.input-checkbox
+			margin: 0 $half-gutter 0 0
+
+	.gameplay-settings
+		display: flex
+		flex-flow: row wrap
+		margin: $quarter-gutter 0
+		.input-checkbox
+			flex: 0 0 50%
+
+	.player-list
+		ul
+			max-height: 15em
+			overflow: auto
+			border: 1px solid $color-theme-5
+			border-radius: $border-radius
+			&:empty
+				display: none
+			li
+				display: flex
+				padding: 0 $quarter-gutter
+				.remove
+					opacity: 0
+					color: $color-red
+					font-weight: 600
+					user-select: none
+					cursor: pointer
+				&:hover
+					background: $color-theme-6
+					.remove
+						opacity: 1
+						margin: 0 0 0 $half-gutter
